@@ -357,12 +357,12 @@ function process_post_data()
             }
 
             // Plugin filter to be called before deleting a file
-            CPGPluginAPI::filter('before_delete_file', $pic);
+            CPGPluginAPI::action('before_delete_file', $pic);
 
             cpg_db_query("DELETE FROM {$CONFIG['TABLE_PICTURES']} WHERE pid = $pid");
 
             // Plugin filter to be called after a file is deleted
-            CPGPluginAPI::filter('after_delete_file', $pic);
+            CPGPluginAPI::action('after_delete_file', $pic);
         } else {
             cpg_db_query("UPDATE {$CONFIG['TABLE_PICTURES']} SET $update WHERE pid = $pid");
 
